<resources>
    <string name="app_name">OpenGL1</string>
    <string name="minusX">-x</string>
    <string name="plusX">+x</string>
    <string name="minusY">-y</string>
    <string name="plusY">+y</string>
    <string name="minusZ">-z</string>
    <string name="plusZ">+z</string>
    <string name="clock">Clock</string>
    <string name="anticlock">AntiClock</string>
    <string name="foward">Foward</string>
    <string name="backwards">Backwards</string>
</resources>